eog (2.10.2-1) UNRELEASED; urgency=low

  * Set maintainer to the pkg-gnome group.

 -- Loic Minier <lool@dooz.org>  Tue,  9 Aug 2005 22:01:03 +0200

eog (2.10.2-0.2) unstable; urgency=low

  * Non-maintainer upload by the GNOME team.
  * Build-depend on libexif-dev 0.6.12 (closes: #321312)

 -- Ross Burton <ross@debian.org>  Mon,  8 Aug 2005 09:14:04 +0100

eog (2.10.2-0.1) unstable; urgency=low

  * Non-maintainer upload by the GNOME team.
  * New upstream release.

 -- Jordi Mallach <jordi@debian.org>  Thu,  7 Jul 2005 19:38:12 +0200

eog (2.10.0-0.2) unstable; urgency=low

  * Non-maintainer upload by the GNOME team.
  * Upload to unstable.
  * debian/control: drop gettext, add cdbs and bump debhelper for
    build-depends.
  * debian/rules: rewrite to use cdbs.
    - cdbs doesn't use dh_installmanpages (closes: #289293).

 -- Jordi Mallach <jordi@debian.org>  Fri, 10 Jun 2005 17:12:43 +0200

eog (2.10.0-0.1) experimental; urgency=low

  * GNOME team upload for GNOME 2.10.
  * New upstream release.
  * debian/control: updated Build-Depends.

 -- Jordi Mallach <jordi@debian.org>  Mon,  9 May 2005 16:45:11 +0200

eog (2.8.2-0.1) unstable; urgency=low

  * Non-Maintainer upload.
  * New upstream release.
  * po/ca.po: fix a bad translation.

 -- Jordi Mallach <jordi@debian.org>  Wed, 29 Dec 2004 21:02:36 +0100

eog (2.8.1-1.1) unstable; urgency=low

  * NMU for GNOME 2.8 in unstable.
  * Upload to unstable.
  * debian/control:
    - Build-Depends on libxml-parser-perl.

 -- Sebastien Bacher <seb128@debian.org>  Wed, 24 Nov 2004 16:39:09 +0100

eog (2.8.1-1) experimental; urgency=low

  * NMU with maintainer approval.
  * New upstream release:
    - the Nautilus "View as Collection" component isn't available anymore.
      (Closes: #223366).
    - fix the image collection mode (Closes: #253005).
    - fix the problem with fix/normal buttons (Closes: #237201).
  * debian/compat:
    - added.
  * debian/control:
    - updated Standards-Version to 3.6.1.0.