@@ -2,8 +2,9 @@ Source: eog
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Team <pkg-gnome-maintainers@lists.alioth.debian.org>
+Uploaders: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Akira TAGOH <tagoh@debian.org>, Andreas Rottmann <rotty@debian.org>, Andrew Lau <netsnipe@users.sourceforge.net>, Carlos Perelló Marín <carlos@pemas.net>, Clément Stenac <zorglub@via.ecp.fr>, Ed Boraas <ed@debian.org>, Edd Dumbill <ejad@debian.org>, Emil Soleyman-Zomalan <emil@nishra.com>, Gustavo Noronha Silva <kov@debian.org>, J.H.M. Dassen (Ray) <jdassen@debian.org>, Joe Drew <drew@debian.org>, Johannes Rohr <jr.debian@rohr.org>, Jordi Mallach <jordi@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>, Josselin Mouette <joss@debian.org>, Loic Minier <lool@dooz.org>, Marc 'HE' Brockschmidt <he@debian.org>, Ondřej Surý <ondrej@debian.org>, Rob Bradford <rob@debianplanet.org>, Robert McQueen <robot101@debian.org>, Ross Burton <ross@debian.org>, Sebastien Bacher <seb128@debian.org>, Sjoerd Simons <sjoerd@debian.org>, Takuo KITAME <kitame@debian.org>
 Standards-Version: 3.6.2
-Build-Depends: cdbs (>= 0.4.24), debhelper (>= 4.2.27), libgconf2-dev (>= 2.6.1-2), libgnomecanvas2-dev (>= 2.6.1.1-2), libgnomeui-dev (>= 2.6.1.1-2), libgnomevfs2-dev (>= 2.6.1.1-3), libgtk2.0-dev (>= 2.4.1-3), libxml2-dev, scrollkeeper, libjpeg62-dev, libpng12-dev, zlib1g-dev, libexif-dev (>= 0.6.12), libxt-dev, libxml-parser-perl
+Build-Depends: cdbs (>= 0.4.24), debhelper (>= 4.2.27), libgconf2-dev (>= 2.6.1-2), libgnomecanvas2-dev (>= 2.6.1.1-2), libgnomeui-dev (>= 2.6.1.1-2), libgnomevfs2-dev (>= 2.6.1.1-3), libgtk2.0-dev (>= 2.4.1-3), libxml2-dev, scrollkeeper, libjpeg62-dev, libpng12-dev, zlib1g-dev, libexif-dev (>= 0.6.12), libxt-dev, libxml-parser-perl, gnome-pkg-tools
 
 Package: eog
 Architecture: any
