@@ -1,0 +1,17 @@
+Source: eog
+Section: gnome
+Priority: optional
+Maintainer: Debian GNOME Team <pkg-gnome-maintainers@lists.alioth.debian.org>
+Uploaders: @GNOME_TEAM@
+Standards-Version: 3.6.2
+Build-Depends: cdbs (>= 0.4.24), debhelper (>= 4.2.27), libgconf2-dev (>= 2.6.1-2), libgnomecanvas2-dev (>= 2.6.1.1-2), libgnomeui-dev (>= 2.6.1.1-2), libgnomevfs2-dev (>= 2.6.1.1-3), libgtk2.0-dev (>= 2.4.1-3), libxml2-dev, scrollkeeper, libjpeg62-dev, libpng12-dev, zlib1g-dev, libexif-dev (>= 0.6.12), libxt-dev, libxml-parser-perl, gnome-pkg-tools
+
+Package: eog
+Architecture: any
+Depends: ${shlibs:Depends}
+Conflicts: eog2
+Description: Eye of Gnome graphics viewer program
+ eog or the Eye of Gnome is a graphics viewer for GNOME which uses the
+ gdk-pixbuf library.  It can deal with large images, and zoom and
+ scroll with constant memory usage.   The goal is a standard graphics
+ viewer for future releases of Gnome.
