@@ -1,8 +1,11 @@
 eog (2.10.2-1) UNRELEASED; urgency=low
 
   * Set maintainer to the pkg-gnome group.
+  * Add gnome-pkg-tools to the build-deps.
+  * Add CDBS' utils rule.
+  * Add gnome-pkg-tools' uploaders rule.
 
- -- Loic Minier <lool@dooz.org>  Tue,  9 Aug 2005 22:01:03 +0200
+ -- Loic Minier <lool@dooz.org>  Tue,  9 Aug 2005 22:05:25 +0200
 
 eog (2.10.2-0.2) unstable; urgency=low
 
